Se realizan ajustes varios, quedan funcionando las empresas tractoras asociadas

--- a/config/locales/activeadmin.es.yml
+++ b/config/locales/activeadmin.es.yml
@@ -154,7 +154,7 @@ es:
       admin_user: "Administradores"
       semaphore: "Semáforo"
       option: "Opción"
-      company: "Empresa"
+      company: "Organización"
     attributes:
       active_admin/comment:
         author_type: Author type
