--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -3,39 +3,39 @@
 es:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "Su correo se ha confirmado de manera satisfactoria."
+      send_instructions: "Recibirá un correo con instrucciones para confirmar su cuenta de correo en unos minutos."
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
+      already_authenticated: "Ya se encuentra logueada."
+      inactive: "Su cuenta aún no está activa."
+      invalid: "%{authentication_keys} o contraseña incorrecta."
+      locked: "Su cuenta está bloqueada."
       last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      not_found_in_database: "%{authentication_keys} o contraseña incorrecta."
+      timeout: "Su sesión ha expirado. Por favor ingrese nuevamente"
+      unauthenticated: "Debe ingresar al sistema o crear una nueva empresa para poder acceder."
+      unconfirmed: "Debe confirmar su dirección de correo para continuar."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Confirma tu dirección de correo"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Instrucciones para el cambio de contraseña"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "Instrucciones para desbloqueo de cuenta"
       email_changed:
-        subject: "Email Changed"
+        subject: "Cambio de correo confirmado"
       password_change:
-        subject: "Password Changed"
+        subject: "Cambio de contraseña confirmada"
     omniauth_callbacks:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
     passwords:
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
+      send_instructions: "Recibirá un correo con instrucciones para cambiar su contraseña en unos minutos."
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      updated: "Su contraseña se ha cambiado correctamente. Se ha iniciado sesión."
+      updated_not_active: "Su contraseña se ha cambiado correctamente."
     registrations:
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
       signed_up: "Welcome! You have signed up successfully."
@@ -46,16 +46,16 @@ es:
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "Sesión iniciada."
+      signed_out: "Sesión terminada."
+      already_signed_out: "Sesión terminada."
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
+      already_confirmed: "ya está confirmada, por favor inicia sesión"
       confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
       expired: "has expired, please request a new one"
       not_found: "not found"
