Primera versión con evaluaciones funcional.

--- a/config/locales/activeadmin.es.yml
+++ b/config/locales/activeadmin.es.yml
@@ -155,6 +155,8 @@ es:
       semaphore: "Semáforo"
       option: "Opción"
       company: "Organización"
+      evaluation: "Evaluación"
+      evaluations: "Evaluaciones"
     attributes:
       active_admin/comment:
         author_type: Author type
