--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -44,7 +44,7 @@ es:
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
       signed_up_but_unconfirmed: "Se ha enviado un correo al correo de la empresa para validar su usuario. Por favor siga las instrucciones."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirmation link to confirm your new email address."
-      updated: "Your account has been updated successfully."
+      updated: "Se han actualizado sus datos."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
     sessions:
       signed_in: "Sesión iniciada."
